finishing slider styles

--- a/index.html
+++ b/index.html
@@ -185,25 +185,75 @@
                         <div class="row">
                             <div class="col-4">
                                 <div class="cities-slider--city--bottom__card">
-                                    <div class="card-icon"><img src="img/map.png" alt=""></div>
-                                    <div class="card-title">Priceless<br>Cities</div>
-                                    <div class="card-text">Disfruta experiencias exclusivas
-                                        en New York.</div>
+                                    <div class="card-inner">
+                                        <div class="card-front-text">
+                                            <div class="card-icon"><img src="img/map.png" alt=""></div>
+                                            <div class="card-title">Priceless<br>Cities</div>
+                                            <div class="card-text">Disfruta experiencias exclusivas
+                                                en New York.</div>
+                                        </div>
+                                        <div class="card-back-text">
+                                            <div class="back-top">
+                                                <span class="name">Miami, Florida</span>
+                                                <h5 class="frace">Treat yoursel to a VIP ice cream party at MadLab</h5>
+                                            </div>
+                                            <div class="back-bottom">
+                                                <span class="name">Miami, Florida</span>
+                                                <h5 class="frace">Take a private curated tour of the Rubell Museum</h5>
+                                            </div>
+                                        </div>
+                                    </div>
                                 </div>
                             </div>
                             <div class="col-4">
                                 <div class="cities-slider--city--bottom__card">
-                                    <div class="card-icon"><img src="img/suitcase.png" alt=""></div>
-                                    <div class="card-title">Mastercard protectioner<br>
-                                        Rewards</div>
-                                    <div class="card-text">Recibe rembolsos automáticos por tus compras en New York.</div>
+                                    <div class="card-inner">
+                                        <div class="card-front-text">
+                                            <div class="card-icon"><img src="img/suitcase.png" alt=""></div>
+                                            <div class="card-title">Mastercard protectioner<br>
+                                                Rewards</div>
+                                            <div class="card-text">Recibe rembolsos automáticos por tus compras en New York.</div>
+                                        </div>
+                                        <div class="card-back-text">
+                                            <div class="back-top">
+                                                <span class="name">Miami, Florida</span>
+                                                <h5 class="frace">Treat yoursel to a VIP ice cream party at MadLab</h5>
+                                            </div>
+                                            <div class="back-bottom">
+                                                <span class="name">Miami, Florida</span>
+                                                <h5 class="frace">Take a private curated tour of the Rubell Museum</h5>
+                                            </div>
+                                        </div>
+                                    </div>
                                 </div>
                             </div>
                             <div class="col-4">
                                 <div class="cities-slider--city--bottom__card">
-                                    <div class="card-icon"><img src="img/pin.png" alt=""></div>
-                                    <div class="card-title">Loungekey<br></div>
-                                    <div class="card-text">Viaja siempre al mejor estilo VIP en New York.</div>
+                                    <div class="card-inner">
+                                        <div class="card-front-text">
+                                            <div class="card-icon"><img src="img/pin.png" alt=""></div>
+                                            <div class="card-title">Loungekey<br></div>
+                                            <div class="card-text">Viaja siempre al mejor estilo VIP en New York.</div>
+                                        </div>
+                                        <div class="card-back-text">
+                                            <div class="back-top last">
+                                                <span class="name">Estados Unidos</span>
+                                                <h5 class="frace">Central Terminal<br>Concourse E</h5>
+                                                <div class="furnature">
+                                                    <img src="img/furnature.png" alt="">
+                                                    <span class="room">Lounges</span>
+                                                </div>
+                                            </div>
+                                            <div class="back-bottom last">
+                                                <span class="name">Estados Unidos</span>
+                                                <h5 class="frace">Central Terminal<br>Concourse F</h5>
+                                                <div class="furnature">
+                                                    <img src="img/furnature.png" alt="">
+                                                    <span class="room">Lounges</span>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
                                 </div>
                             </div>
                         </div>
@@ -229,25 +279,76 @@
                         <div class="row">
                             <div class="col-4">
                                 <div class="cities-slider--city--bottom__card">
-                                    <div class="card-icon"><img src="img/map.png" alt=""></div>
-                                    <div class="card-title">Priceless<br>Cities</div>
-                                    <div class="card-text">Disfruta experiencias exclusivas
-                                        en New York.</div>
+                                    <div class="card-inner">
+                                        <div class="card-front-text">
+                                            <div class="card-icon"><img src="img/map.png" alt=""></div>
+                                            <div class="card-title">Priceless<br>Cities</div>
+                                            <div class="card-text">Disfruta experiencias exclusivas
+                                                en New York.</div>
+                                        </div>
+                                        <div class="card-back-text">
+                                            <div class="back-top">
+                                                <span class="name">Madrid, España</span>
+                                                <h5 class="frace">Hotel Week</h5>
+                                            </div>
+                                            <div class="back-bottom">
+                                                <span class="name">Madrid, España</span>
+                                                <h5 class="frace">Asociación de Amigos de la Repostería</h5>
+                                            </div>
+                                        </div>
+                                    </div>
                                 </div>
                             </div>
                             <div class="col-4">
                                 <div class="cities-slider--city--bottom__card">
-                                    <div class="card-icon"><img src="img/suitcase.png" alt=""></div>
-                                    <div class="card-title">Mastercard Traveler<br>
-                                        Rewards</div>
-                                    <div class="card-text">Recibe rembolsos automáticos por tus compras en New York.</div>
+                                    <div class="card-inner">
+                                        <div class="card-front-text">
+                                            <div class="card-icon"><img src="img/suitcase.png" alt=""></div>
+                                            <div class="card-title">Mastercard Traveler<br>
+                                                Rewards</div>
+                                            <div class="card-text">Recibe rembolsos automáticos por tus compras en New York.</div>
+                                        </div>
+                                        <div class="card-back-text">
+                                            <div class="back-top">
+                                                <span class="name">Madrid, España</span>
+                                                <h5 class="frace">As one of the most important luxury women´s fashion</h5>
+                                            </div>
+                                            <div class="back-bottom">
+                                                <span class="name">Madrid, España</span>
+                                                <h5 class="frace">The exclusive Heritage
+                                                    Madrid Hotel </h5>
+                                            </div>
+                                        </div>
+                                    </div>
                                 </div>
                             </div>
                             <div class="col-4">
                                 <div class="cities-slider--city--bottom__card">
-                                    <div class="card-icon"><img src="img/pin.png" alt=""></div>
-                                    <div class="card-title">Loungekey<br></div>
-                                    <div class="card-text">Viaja siempre al mejor estilo VIP en New York.</div>
+                                    <div class="card-inner">
+                                        <div class="card-front-text">
+                                            <div class="card-icon"><img src="img/pin.png" alt=""></div>
+                                            <div class="card-title">Loungekey<br></div>
+                                            <div class="card-text">Viaja siempre al mejor estilo VIP en New York.</div>
+                                        </div>
+                                        <div class="card-back-text">
+                                            <div class="back-top last">
+                                                <span class="name">Estados Unidos</span>
+                                                <h5 class="frace">Terminal 1</h5>
+                                                <div class="furnature">
+                                                    <img src="img/furnature.png" alt="">
+                                                    <span class="room">Lounges</span>
+                                                </div>
+                                            </div>
+                                            <div class="back-bottom last">
+                                                <span class="name">Estados Unidos</span>
+                                                <h5 class="frace">Terminal 2</h5>
+                                                <div class="furnature">
+                                                    <img src="img/furnature.png" alt="">
+                                                    <span class="room">Lounges</span>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
                                 </div>
                             </div>
                         </div>
@@ -273,25 +374,75 @@
                         <div class="row">
                             <div class="col-4">
                                 <div class="cities-slider--city--bottom__card">
-                                    <div class="card-icon"><img src="img/map.png" alt=""></div>
-                                    <div class="card-title">Priceless<br>Cities</div>
-                                    <div class="card-text">Disfruta experiencias exclusivas
-                                        en New York.</div>
+                                    <div class="card-inner">
+                                        <div class="card-front-text">
+                                            <div class="card-icon"><img src="img/map.png" alt=""></div>
+                                            <div class="card-title">Priceless<br>Cities</div>
+                                            <div class="card-text">Disfruta experiencias exclusivas
+                                                en New York.</div>
+                                        </div>
+                                        <div class="card-back-text">
+                                            <div class="back-top">
+                                                <span class="name">París Francia</span>
+                                                <h5 class="frace">Le Fooding</h5>
+                                            </div>
+                                            <div class="back-bottom">
+                                                <span class="name">Roma, Italia</span>
+                                                <h5 class="frace">Local Aromas</h5>
+                                            </div>
+                                        </div>
+                                    </div>
                                 </div>
                             </div>
                             <div class="col-4">
                                 <div class="cities-slider--city--bottom__card">
-                                    <div class="card-icon"><img src="img/suitcase.png" alt=""></div>
-                                    <div class="card-title">Mastercard Traveler<br>
-                                        Rewards</div>
-                                    <div class="card-text">Recibe rembolsos automáticos por tus compras en New York.</div>
+                                    <div class="card-inner">
+                                        <div class="card-front-text">
+                                            <div class="card-icon"><img src="img/suitcase.png" alt=""></div>
+                                            <div class="card-title">Mastercard Traveler<br>
+                                                Rewards</div>
+                                            <div class="card-text">Recibe rembolsos automáticos por tus compras en New York.</div>
+                                        </div>
+                                        <div class="card-back-text">
+                                            <div class="back-top">
+                                                <span class="name">París, Francia</span>
+                                                <h5 class="frace">Fauchon Grand Café</h5>
+                                            </div>
+                                            <div class="back-bottom">
+                                                <span class="name">Roma, Italia</span>
+                                                <h5 class="frace">Hotel de la Ville, Rome</h5>
+                                            </div>
+                                        </div>
+                                    </div>
                                 </div>
                             </div>
                             <div class="col-4">
                                 <div class="cities-slider--city--bottom__card">
-                                    <div class="card-icon"><img src="img/pin.png" alt=""></div>
-                                    <div class="card-title">Loungekey<br></div>
-                                    <div class="card-text">Viaja siempre al mejor estilo VIP en New York.</div>
+                                    <div class="card-inner">
+                                        <div class="card-front-text">
+                                            <div class="card-icon"><img src="img/pin.png" alt=""></div>
+                                            <div class="card-title">Loungekey<br></div>
+                                            <div class="card-text">Viaja siempre al mejor estilo VIP en New York.</div>
+                                        </div>
+                                        <div class="card-back-text">
+                                            <div class="back-top last">
+                                                <span class="name">Estados Unidos</span>
+                                                <h5 class="frace">Terminal 1</h5>
+                                                <div class="furnature">
+                                                    <img src="img/furnature.png" alt="">
+                                                    <span class="room">Lounges</span>
+                                                </div>
+                                            </div>
+                                            <div class="back-bottom last">
+                                                <span class="name">Estados Unidos</span>
+                                                <h5 class="frace">Terminal 2E</h5>
+                                                <div class="furnature">
+                                                    <img src="img/furnature.png" alt="">
+                                                    <span class="room">Lounges</span>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
                                 </div>
                             </div>
                         </div>
