--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css"/>
     <!-- Add the slick-theme.css if you want default styling -->
     <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick-theme.css"/>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
 
     <link rel="stylesheet" href="/css/styles.css">
     <title>Banco BHD Leon</title>
@@ -54,7 +55,7 @@
         <div id="home-bottom">
             <div class="container-fluid">
                 <div class="bottom-text">
-                    <div class="bottom-text--img">
+                    <div class="bottom-text--img animate__animated animate__backInLeft">
                         <img src="img/cards.png" alt="">
                     </div>
                     <h2 class="bottom-text--title">Tus tarjetas Platinum y Black BHD León Mastercard</h2>
