--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
             <div class="container-fluid">
                 <div class="bottom-text">
                     <div class="bottom-text--img animate__animated animate__backInLeft">
-                        <img src="img/cards.png" alt="">
+                        <img src="img/cards.png" alt="">t
                     </div>
                     <h2 class="bottom-text--title">Tus tarjetas Platinum y Black BHD León Mastercard</h2>
                     <p class="bottom-text--text">te ofrecen increíbles ofertas y beneficios al viajar a tus lugares favoritos en Estados Unidos, Europa, Asia o cualquier lugar del mundo.</p>
@@ -502,7 +502,16 @@
                                 <h5 class="travel-panel--info__text">Tu Tarjeta Mastercard Black te ofrece los servicios exclusivos de Before Boarding en el Aeropuerto Internacional de Las Américas (AILA) y Aeropuerto Internacional El Cibao (STI).</h5>
                                 <div class="collapse" id="before">
                                     <span>
-                                        Nuestro Centro de Asistencia Local de Viajes realizará los trámites de canje de Estrellas BHD León para planificar el viaje que deseas y comprar pasajes en la línea aérea de tu preferencia sin restricciones de fechas. También puedes realizar excursiones y reservación de hoteles locales e internacionales, cruceros, eventos y mucho más.
+                                        <ul>
+                                            <li>Acceso a Sala VIP*</li>
+                                            <li>Tramites de migración.</li>
+                                            <li>Acceso por filtro de seguridad privado.</li>
+                                            <li>Acompañamiento a la zona de embarque.</li>
+                                            <li>Acompañamiento a la zona de embarque.</li>
+                                            <li>Recogida de equipaje.</li>
+                                        </ul>
+                                        Incluye diez (10) visitas gratuitas por año** por tarjetahabiente, a partir del 1 de febrero 2020 este beneficio será unicamente exclusivo para titulares (principales o adicionales) incluyendo solo acompañantes menores de 18 años***. Para las reservas realizadas antes de esta fecha aplican las condiciones actuales.
+Realiza tu reserva con 24 horas de antelación a través de beforeboarding.com *Acceso para la Sala Premium y Sala Caribe en AILA y Sala Zafiro en El Cibao. **la fecha de corte anual es cada 1 de julio. ***Si usas los servicios de salida y llegada habrás utilizado 2 visitas. Si vas acompañado, habrás utilizado tantas visitas como acompañantes viajen contigo. 
                                     </span>
                                 </div>
                                 <button  type="button" data-bs-toggle="collapse" data-bs-target="#before" aria-expanded="false" aria-controls="collapseExample">
@@ -525,11 +534,12 @@
                         </div>
                         <div class="col-9">
                             <div class="travel-panel--info">
-                                <h4 class="travel-panel--info__title">BHD León Viajes.</h4>
+                                <h4 class="travel-panel--info__title">Wi-Fi Boingo</h4>
                                 <h5 class="travel-panel--info__text">Esta es la forma más conveniente de redimir las Estrellas BHD León que acumulaste con Mastercard Black para que hagas el viaje que te mereces.</h5>
                                 <div class="collapse" id="bhd">
                                     <span>
-                                        Nuestro Centro de Asistencia Local de Viajes realizará los trámites de canje de Estrellas BHD León para planificar el viaje que deseas y comprar pasajes en la línea aérea de tu preferencia sin restricciones de fechas. También puedes realizar excursiones y reservación de hoteles locales e internacionales, cruceros, eventos y mucho más.
+                                        Proporciona acceso global, gratuito e ilimitado después de inscribirse a su cuenta Boingo, en más de 1 millón de hotspots con velocidad superior al promedio de banda ancha, estos hotspots incluyen una red en aeropuertos, hoteles, restaurantes, escenarios, estadios, hubs de transporte y vuelos y te da acceso hasta para cuatro dispositivos.
+                                        Solo debes registrar tu Tarjeta Mastercard Black ya activada en <a href="https://mastercard.boingo.com">https://mastercard.boingo.com</a> para inscribirte al beneficio de Wi-Fi. Una vez inscrito recibirás instrucciones para descargar la aplicación WiFinder de Boingo y así tener acceso a la red.
                                     </span>
                                 </div>
                                 <button type="button" data-bs-toggle="collapse" data-bs-target="#bhd" aria-expanded="false" aria-controls="collapseExample">
@@ -548,11 +558,14 @@
                         </div>
                         <div class="col-9">
                             <div class="travel-panel--info">
-                                <h4 class="travel-panel--info__title">Before Boarding.</h4>
-                                <h5 class="travel-panel--info__text">Tu Tarjeta Mastercard Black te ofrece los servicios exclusivos de Before Boarding en el Aeropuerto Internacional de Las Américas (AILA) y Aeropuerto Internacional El Cibao (STI).</h5>
+                                <h4 class="travel-panel--info__title">Mastercard® Travel & Lifestyle Services.</h4>
+                                <h5 class="travel-panel--info__text">¿Deseas planear tus próximas vacaciones? Un asesor de Travel & Lifestyle Services de Mastercard está disponible 24 horas al día y te ayudará durante todo el viaje.</h5>
                                 <div class="collapse" id="stairs">
                                     <span >
-                                        Nuestro Centro de Asistencia Local de Viajes realizará los trámites de canje de Estrellas BHD León para planificar el viaje que deseas y comprar pasajes en la línea aérea de tu preferencia sin restricciones de fechas. También puedes realizar excursiones y reservación de hoteles locales e internacionales, cruceros, eventos y mucho más.
+                                        Recibe desayuno diario gratuito, upgrades en habitaciones*, early check-in/late check-out* y servicios especiales en más de 2,000 hoteles y resorts de 4 y 5 estrellas, alrededor del mundo. Además, ahorros y beneficios exclusivos en alquiler de autos, boletos aéreos, tours y cruceros. También cuentas con la plataforma digital para comprar reservar y comprar online tus tickets aéreos, hoteles, alquiler de auto, y todo lo demás que necesitas para tu viaje, en moneda local y en múltiples idiomas.
+
+<br>Ingresa a <a href="http://travel.mastercard.com">http://travel.mastercard.com</a> y prepara tus vacaciones.
+
                                     </span>
                                 </div>
                                 <button type="button" data-bs-toggle="collapse" data-bs-target="#stairs" aria-expanded="false" aria-controls="collapseExample">
