--- a/index.html
+++ b/index.html
@@ -564,7 +564,7 @@ Realiza tu reserva con 24 horas de antelación a través de beforeboarding.com *
                                     <span >
                                         Recibe desayuno diario gratuito, upgrades en habitaciones*, early check-in/late check-out* y servicios especiales en más de 2,000 hoteles y resorts de 4 y 5 estrellas, alrededor del mundo. Además, ahorros y beneficios exclusivos en alquiler de autos, boletos aéreos, tours y cruceros. También cuentas con la plataforma digital para comprar reservar y comprar online tus tickets aéreos, hoteles, alquiler de auto, y todo lo demás que necesitas para tu viaje, en moneda local y en múltiples idiomas.
 
-<br>Ingresa a <a href="http://travel.mastercard.com">http://travel.mastercard.com</a> y prepara tus vacaciones.
+<br><br>Ingresa a <a href="http://travel.mastercard.com">http://travel.mastercard.com</a> y prepara tus vacaciones.
 
                                     </span>
                                 </div>
@@ -623,7 +623,7 @@ Realiza tu reserva con 24 horas de antelación a través de beforeboarding.com *
                         <div class="col-9">
                             <div class="services-panel--info">
                                 <h4 class="services-panel--info__title">Asistente Personal.</h4>
-                                <h5 class="services-panel--info__text">ener tiempo libre para disfrutar no tiene precio. Por eso, Mastercard te proporciona asistencia las 24 hras del día, los 7 días de la semana para satisfacer cualquier solicitud de reservas en restaurantes, coordinación de experiencias especiales, información y reservas de entretenimiento, referencias, entre otros.</h5>
+                                <h5 class="services-panel--info__text">Tener tiempo libre para disfrutar no tiene precio. Por eso, Mastercard te proporciona asistencia las 24 hras del día, los 7 días de la semana para satisfacer cualquier solicitud de reservas en restaurantes, coordinación de experiencias especiales, información y reservas de entretenimiento, referencias, entre otros.</h5>
                             </div>
                         </div>
                     </div>
