--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
             <div class="container-fluid">
                 <div class="bottom-text">
                     <div class="bottom-text--img animate__animated animate__backInLeft">
-                        <img src="img/cards.png" alt="">t
+                        <img src="img/cards.png" alt="">
                     </div>
                     <h2 class="bottom-text--title">Tus tarjetas Platinum y Black BHD León Mastercard</h2>
                     <p class="bottom-text--text">te ofrecen increíbles ofertas y beneficios al viajar a tus lugares favoritos en Estados Unidos, Europa, Asia o cualquier lugar del mundo.</p>
